--- a/popup.html
+++ b/popup.html
@@ -18,6 +18,13 @@
         <div class="main" id="mainDiv">
             <h1 class="title">BunnyBlocker</h1>
             <div class="settingsbutton" id="settingsButton">&#9881;</div>
+            <div class="helpButton" id="helpButton">?</div>
+            <div class="powerbutton">
+                <label class="switch">
+                    <input type="checkbox">
+                    <span class="slider round"></span>
+                </label>
+            </div>
         </div>
     </body>
 </html>
