added basic local storage functionality

--- a/popup.html
+++ b/popup.html
@@ -12,11 +12,17 @@
             <div class="inputdiv">
                 <label for="urlinput">Add URLs to block</label><br>
                 <input type="text" id="urlinput" name="urlinput" class="url-input"><br>
-                <input type="submit" value="Add URL" class="submit">
+                <input type="submit" value="Add URL" class="submit" id="urlsubmit">
+            </div>
+            <div class="blockedurls">
+                <h3 style="text-align: center;">Blocked URLs</h3>
+                <div class="blockedlist">
+                    <p class="urlelement">filler</p>
+                </div>
             </div>
         </div>
         <div class="main" id="mainDiv">
-            <h1 class="title">BunnyBlocker</h1>
+            <h1 class="htitle">BunnyBlocker</h1>
             <div class="settingsbutton" id="settingsButton">&#9881;</div>
             <div class="helpButton" id="helpButton">?</div>
             <div class="powerbutton">
