--- a/popup.html
+++ b/popup.html
@@ -32,7 +32,7 @@
             <div class="helpButton" id="helpButton">?</div>
             <div class="powerbutton">
                 <label class="switch">
-                    <input type="checkbox">
+                    <input type="checkbox" id="toggle">
                     <span class="slider round"></span>
                 </label>
             </div>
